Fix horizontal scroll not working

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -62,7 +62,7 @@ body {
   font-size: $body-size;
 
   @media (--mobile) {
-    overflow-x: hidden;
+    // overflow-x: hidden;
   }
 }
 
